# watercrawl

./: .coverage  .env  .env.example  .gitignore  .markdownlint-cli2.yaml  .npmrc  .pre-commit-config.yaml  .prettierignore  .rgignore  .sqlfluff  .yamllint.yaml  AGENTS.md  CHANGELOG.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DOCUMENTATION_OVERHAUL.md  Dockerfile  ENVIRONMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  Next_Steps.md  README.md  REFACTORING_NOTES.md  Red Team + Software Excellence.md  SACAA Flight Schools - FINAL copy.xlsx  SCRATCH.md  SCRATCH_IMPLEMENTATION.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_SUMMARY.md  WC_ITEMS_IMPLEMENTATION_SUMMARY.md  catalog-info.yaml  docker-compose.yml  examples.py  justfile  main.py  mkdocs.yml  package-lock.json  package.json  (+8 more)
.config/pip/: pip.conf
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup-steps.yml  pull_request_template.md
.github/instructions/: python-tests.instructions.md
.github/workflows/: ci.yml  collect-problems.yml  copilot-setup-steps.yml  deploy-docs.yml  pnpm-validate.yml  scorecard.yml  techdocs.yml  wheel-mirror.yml  wheelhouse-consumer.yml  wheelhouse-producer.yml
.hypothesis/constants/: 01b2c722736c6f76  0292351e56a5fb5a  0387c9d46cd87865  048b1bc0bca44381  06dc34bd4f3be111  14d06819c35006e3  2500b081b835686d  3610e7387bb62e18  3c55d3d046ed33e3  413c1acd5560b426  41bac487d030653f  52d3c8fdcbc2ce54  53794d83693f3352  5399782436d13813  5b9b46aa338f2f60  5f6f36fd167b17d8  6c2561f2b862102d  7610c998bab47dca  8d9310a136e2a828  8e05ae004777ba7b  8ed2f26348f4d171  9c0d807345e738e9  a4c233f54933c8a4  ac8f5232bb8eafda  afc5c663f713a744  b17545b0c1568cf0  b6673c922bec7967  b77affcb748200bc  bb1fb98435c823d4  bebcb561abd219a9  c18f6362b954710c  cc3cfb614dc9595c  ccf8452abd0c3515  cfb9f4c0185f113e  d093b3b94c85fadd  dda60fa7c653226a  deb56c0e664c01fd  e5ab9f6211919b44  e9ce708ec682ebed  edfbcd910377fa00  (+4 more)
.trunk/: trunk.yaml
analytics/: .gitignore  dbt_project.yml  profiles.yml
app/: README.md  __init__.py  cli.py
apps/: README.md  __init__.py
apps/analyst/: README.md  __init__.py  cli.py  graph_cli.py
apps/automation/: README.md  __init__.py  cli.py  qa_tasks.py
artifacts/chaos/: 2025-10-26_F-001.json  2025-10-26_F-004.json  2025-10-26_F-011.json
artifacts/commits/: compliance_guardrails_followup.commit
artifacts/plans/: compliance_guardrails_followup.plan
codex/: README.md
codex-dx-template/: AGENTS.md
codex/evals/: promptfooconfig.yaml
crawlkit/: __init__.py  types.py
crawlkit/adapter/: firecrawl_compat.py
crawlkit/compliance/: guard.py
crawlkit/distill/: distill.py
crawlkit/extract/: entities.py
crawlkit/fetch/: polite_fetch.py
data/: .gitignore  sample.csv
dev/: README.md  __init__.py  cli.py
docs/: architecture.md  chaos-fmea-scenarios.md  cli.md  closeout-implementation-summary.md  compliance.md  copilot-setup.md  data-normalisation.md  data-quality.md  dependency-optimization-summary.md  dependency-resilience.md  dependency-troubleshooting.md  ephemeral-qa-guide.md  gap-analysis.md  index.md  lineage-lakehouse.md  linting-improvements.md  mcp-audit-policy.md  mcp-promptfoo-gate.md  mcp.md  next-steps-resolution-summary.md  offline-linters.md  operations.md  phase1-implementation.md  production-readiness-review.md  prr-quick-reference.md  qa.md  relationship-mapping.md  research-pipeline.md  surface-taxonomy.md
docs-starlight/: .markdownlint-cli2.yaml  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/adr/: index.md  (+3 more)
firecrawl_demo/: __init__.py  analyst_ui.py  cache.py  cli.py  compliance.py  config.py  excel.py  external_sources.py  firecrawl_client.py  lakehouse.py  models.py  pipeline.py  presets.py  quality.py  rag_evaluation.py  research.py  secrets.py  validation.py  versioning.py
great_expectations/: .gitignore  great_expectations.yml
plans/: 2025-11-01_research_executor_fix.plan  2025-11-02_alpha_readiness.plan  bootstrap_offline_cache.commit  bootstrap_offline_cache.plan  dataset_validator_enhancements.commit  dataset_validator_enhancements.plan  dependency_refresh.commit  dependency_refresh.plan  multi_source_ingestion.plan  qa_lint_config.plan  wheel_remediation_refresh.plan  wheelhouse_tls_fix.commit  wheelhouse_tls_fix.plan
platform/: README.md
presets/: Runbook.md  dependency_blockers.toml  dependency_targets.toml  firecrawl_crawl.json  firecrawl_map.json  firecrawl_scrape.json  problems_tools.toml  type_stub_sync.toml
profiles/: za_flight_schools.yaml
scripts/: __init__.py  autofix.py  autofix.sh  bootstrap_env.py  bootstrap_node.py  bootstrap_python.py  ci_summary.py  cleanup.py  collect_problems.py  collect_problems.sh  demo_prr.py  dependency_matrix.py  discover_environment.py  download_wheelhouse_artifact.py  ensure_deps.py  mirror_wheels.py  provision_marshmallow.py  provision_wheelhouse.py  run_pytest.sh  run_with_stubs.sh  stage_node_tarball.py  sync_type_stubs.py  test_dependency_config.sh  test_offline_linters.py  validate_wheel.py  verify_artifact_signatures.py  vscode_problems_helper.py  wheel_status.py
templates/: transparency_notice.md
tests/: test_alerts.py  test_analyst_ui.py  test_app_cli.py  test_architecture_boundaries.py  test_audit.py  test_autofix.py  test_bootstrap.py  test_bootstrap_env.py  test_cache.py  test_change_tracking.py  test_chaos.py  test_ci_summary.py  test_cleanup.py  test_cli.py  test_collect_problems.py  test_compliance.py  test_compliance_review.py  test_content_hygiene.py  test_contract_consumers.py  test_contract_coverage.py  test_contract_schemas.py  test_contracts.py  test_core_column_inference.py  test_core_normalization.py  test_crawl_policy.py  test_deequ.py  test_dependency_matrix.py  test_dev_cli.py  test_drift.py  test_drift_dashboard.py  test_e2e_pipeline.py  test_excel.py  test_excel_exporter.py  test_external_sources.py  test_firecrawl_client.py  test_firecrawl_client_async.py  test_graph_cli.py  test_graph_semantics.py  test_infrastructure_planning.py  test_integrations_plugins.py  (+33 more)
tools/: README.md  __init__.py
(+386 files in other folders)
