[tool.poetry]
name = "firecrawl-demo"
version = "0.1.0"
description = "Modular, async-ready, compliance-driven enrichment pipeline for Firecrawl."
authors = ["ACES Aerodynamics Analyst <info@acesaero.co.za>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "*"
openpyxl = "*"
streamlit = { version = "^1.50.0", python = ">=3.9,<3.9.7 || >3.9.7,<4.0" }
requests = "*"
httpx = "*"
tenacity = "*"
pydantic = "*"
structlog = "*"
prometheus-client = "*"
pydantic-settings = "^2.11.0"
boto3 = "^1.40.53"
azure-identity = "^1.25.1"
azure-keyvault-secrets = "^4.10.0"
pint = "0.25"
firecrawl-py = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
black = "*"
isort = "*"
mypy = "*"
bandit = "*"
dotenv-linter = "*"
pre-commit = "*"
pandas-stubs = "*"
types-requests = "*"
great-expectations = "^1.7.1"
dbt-core = "^1.8"
dbt-duckdb = "^1.9"
hypothesis = "6.142.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
