[tool.poetry]
name = "firecrawl-demo"
version = "0.1.0"
description = "Modular, async-ready, compliance-driven enrichment pipeline for Firecrawl."
authors = ["ACES Aerodynamics Analyst <info@acesaero.co.za>"]
packages = [{ include = "firecrawl_demo" }]
exclude = [
  "apps",
  "codex",
  "data",
  "data_contracts",
  "docs",
  "docs-starlight",
  "examples.py",
  "main.py",
  "node_modules",
  "platform",
  "presets",
  "scripts",
  "tests",
  "tools",
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
pandas = "*"
openpyxl = "*"
streamlit = "^1.50.0"
requests = "*"
httpx = "*"
tenacity = "*"
pydantic = "*"
structlog = "*"
prometheus-client = "*"
pydantic-settings = "^2.11.0"
boto3 = "^1.40.53"
azure-identity = "^1.25.1"
azure-keyvault-secrets = "^4.10.0"
pint = "0.25"
firecrawl-py = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
black = "*"
isort = "*"
mypy = "*"
bandit = "*"
dotenv-linter = "*"
pre-commit = "*"
pandas-stubs = "*"
types-requests = "*"
jupyter = "*"
great-expectations = { version = "^1.7.1", python = "<3.14" }
dbt-core = "^1.8"
dbt-duckdb = "^1.9"
hypothesis = "6.142.1"
pydocstyle = "^6.3.0"
safety = "^3.6.2"
sqlfluff = "^3.4.2"
sqlfluff-templater-dbt = "^3.4.2"
yamllint = "^1.37.1"
safety-db = "^2021.7.17"
types-boto3 = "*"
types-botocore = "*"
types-pillow = "*"
types-pyyaml = "*"
types-setuptools = "*"
types-urllib3 = "*"
types-python-dateutil = "*"
narwhals = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py314"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["apps", "firecrawl_demo", "scripts"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["apps", "firecrawl_demo", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
